packages/flow-type-tests/__tests__/fixtures/fixture-mixed-composition.0.131.0.txt
Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:12:2

Cannot create `Foo` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:12:2
   12| <Foo />; // Missing foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:12:1
   12| <Foo />; // Missing foo
       ^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:15:2

Cannot create `Foo` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:15:2
   15| <Foo foo="notfoo" />; // Wrong foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:15:10
   15| <Foo foo="notfoo" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:22:2

Cannot create `Bar` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:22:2
   22| <Bar bar="bar" />; // Missing foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:22:1
   22| <Bar bar="bar" />; // Missing foo
       ^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:24:2

Cannot create `Bar` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:24:2
   24| <Bar foo="notfoo" bar="bar" />; // Wrong foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:24:10
   24| <Bar foo="notfoo" bar="bar" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:26:2

Cannot create `Bar` element because property `bar` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:26:2
   26| <Bar foo="foo" />; // Missing bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:26:1
   26| <Bar foo="foo" />; // Missing bar
       ^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:37
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:28:2

Cannot create `Bar` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:28:2
   28| <Bar foo="foo" bar="notbar" />; // Wrong bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:28:20
   28| <Bar foo="foo" bar="notbar" />; // Wrong bar
                          ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:43
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:35:2

Cannot create `Baz` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:35:2
   35| <Baz bar="bar" baz="baz" />; // Missing foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:35:1
   35| <Baz bar="bar" baz="baz" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:37:2

Cannot create `Baz` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:37:2
   37| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:37:10
   37| <Baz foo="notfoo" bar="bar" baz="baz" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:39:2

Cannot create `Baz` element because property `bar` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:39:2
   39| <Baz foo="foo" baz="baz" />; // Missing bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:39:1
   39| <Baz foo="foo" baz="baz" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:37
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:41:2

Cannot create `Baz` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:41:2
   41| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:41:20
   41| <Baz foo="foo" bar="notbar" baz="baz" />; // Wrong bar
                          ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:43
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:43:2

Cannot create `Baz` element because property `baz` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:43:2
   43| <Baz foo="foo" bar="bar" />; // Missing baz
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:43:1
   43| <Baz foo="foo" bar="bar" />; // Missing baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:41
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                               ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:45:2

Cannot create `Baz` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:45:2
   45| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:45:30
   45| <Baz foo="foo" bar="bar" baz="notbaz" />; // Wrong baz
                                    ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:47
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                                     ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:52:2

Cannot create `Qux` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:52:2
   52| <Qux bar="bar" baz="baz" qux="qux" />; // Missing foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:52:1
   52| <Qux bar="bar" baz="baz" qux="qux" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:54:2

Cannot create `Qux` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:54:2
   54| <Qux foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:54:10
   54| <Qux foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:56:2

Cannot create `Qux` element because property `bar` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:56:2
   56| <Qux foo="foo" baz="baz" qux="qux" />; // Missing bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:56:1
   56| <Qux foo="foo" baz="baz" qux="qux" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:37
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:58:2

Cannot create `Qux` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:58:2
   58| <Qux foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:58:20
   58| <Qux foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
                          ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:43
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:60:2

Cannot create `Qux` element because property `baz` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:60:2
   60| <Qux foo="foo" bar="bar" qux="qux" />; // Missing baz
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:60:1
   60| <Qux foo="foo" bar="bar" qux="qux" />; // Missing baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:41
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                               ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:62:2

Cannot create `Qux` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:62:2
   62| <Qux foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:62:30
   62| <Qux foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
                                    ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:47
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                                     ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:64:2

Cannot create `Qux` element because property `qux` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:64:2
   64| <Qux foo="foo" bar="bar" baz="baz" />; // Missing qux
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:64:1
   64| <Qux foo="foo" bar="bar" baz="baz" />; // Missing qux
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:37
   49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:66:2

Cannot create `Qux` element because string [1] is incompatible with string literal `qux` [2] in property `qux`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:66:2
   66| <Qux foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
        ^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:66:40
   66| <Qux foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
                                              ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:43
   49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:74:2

Cannot create `Blah1` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:74:2
   74| <Blah1 bar="bar" baz="baz" qux="qux" />; // Missing foo
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:74:1
   74| <Blah1 bar="bar" baz="baz" qux="qux" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:76:2

Cannot create `Blah1` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:76:2
   76| <Blah1 foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:76:12
   76| <Blah1 foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
                  ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:78:2

Cannot create `Blah1` element because property `bar` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:78:2
   78| <Blah1 foo="foo" baz="baz" qux="qux" />; // Missing bar
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:78:1
   78| <Blah1 foo="foo" baz="baz" qux="qux" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:37
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:80:2

Cannot create `Blah1` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:80:2
   80| <Blah1 foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:80:22
   80| <Blah1 foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
                            ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:43
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:82:2

Cannot create `Blah1` element because property `baz` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:82:2
   82| <Blah1 foo="foo" bar="bar" qux="qux" />; // Missing baz
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:82:1
   82| <Blah1 foo="foo" bar="bar" qux="qux" />; // Missing baz
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:41
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                               ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:84:2

Cannot create `Blah1` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:84:2
   84| <Blah1 foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:84:32
   84| <Blah1 foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
                                      ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:47
   32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                                     ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:86:2

Cannot create `Blah1` element because property `qux` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:86:2
   86| <Blah1 foo="foo" bar="bar" baz="baz" />; // Missing qux
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:86:1
   86| <Blah1 foo="foo" bar="bar" baz="baz" />; // Missing qux
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:37
   49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:88:2

Cannot create `Blah1` element because string [1] is incompatible with string literal `qux` [2] in property `qux`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:88:2
   88| <Blah1 foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:88:42
   88| <Blah1 foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
                                                ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:43
   49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:93:2

Cannot create `Blah2` element because property `foo` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:93:2
   93| <Blah2 bar="bar" baz="baz" qux="qux" />; // Missing foo
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:93:1
   93| <Blah2 bar="bar" baz="baz" qux="qux" />; // Missing foo
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:20
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                          ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:95:2

Cannot create `Blah2` element because string [1] is incompatible with string literal `foo` [2] in property `foo`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:95:2
   95| <Blah2 foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:95:12
   95| <Blah2 foo="notfoo" bar="bar" baz="baz" qux="qux" />; // Wrong foo
                  ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:7:26
    7| const Foo = styled<{foo: "foo"}>("div", (_props: {foo: "foo"}) => ({
                                ^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:97:2

Cannot create `Blah2` element because property `bar` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:97:2
   97| <Blah2 foo="foo" baz="baz" qux="qux" />; // Missing bar
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:97:1
   97| <Blah2 foo="foo" baz="baz" qux="qux" />; // Missing bar
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:37
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                           ^^^^^^^^^^^^ [2]


Error -------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:99:2

Cannot create `Blah2` element because string [1] is incompatible with string literal `bar` [2] in property `bar`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:99:2
   99| <Blah2 foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
        ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:99:22
   99| <Blah2 foo="foo" bar="notbar" baz="baz" qux="qux" />; // Wrong bar
                            ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:19:43
   19| const Bar = withStyle(Foo, (_props: {bar: "bar"}) => ({color: "red"}));
                                                 ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:101:2

Cannot create `Blah2` element because property `baz` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:101:2
   101| <Blah2 foo="foo" bar="bar" qux="qux" />; // Missing baz
         ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:101:1
   101| <Blah2 foo="foo" bar="bar" qux="qux" />; // Missing baz
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:41
    32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                                ^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:103:2

Cannot create `Blah2` element because string [1] is incompatible with string literal `baz` [2] in property `baz`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:103:2
   103| <Blah2 foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
         ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:103:32
   103| <Blah2 foo="foo" bar="bar" baz="notbaz" qux="qux" />; // Wrong baz
                                       ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:32:47
    32| const Baz = withStyleDeep(Bar, (_props: {baz: "baz"}) => ({color: "red"}));
                                                      ^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:105:2

Cannot create `Blah2` element because property `qux` is missing in props [1] but exists in object type [2].
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:105:2
   105| <Blah2 foo="foo" bar="bar" baz="baz" />; // Missing qux
         ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:105:1
   105| <Blah2 foo="foo" bar="bar" baz="baz" />; // Missing qux
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:37
    49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                            ^^^^^^^^^^^^ [2]


Error ------------------------------------------- packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:107:2

Cannot create `Blah2` element because string [1] is incompatible with string literal `qux` [2] in property `qux`.
[incompatible-use]

   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:107:2
   107| <Blah2 foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
         ^^^^^

References:
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:107:42
   107| <Blah2 foo="foo" bar="bar" baz="baz" qux="notqux" />; // Wrong qux
                                                 ^^^^^^^^ [1]
   packages/flow-type-tests/__tests__/fixtures/mixed-composition.js:49:43
    49| const Qux = withStyle(Baz, (_props: {qux: "qux"}) => ({color: "red"}));
                                                  ^^^^^ [2]



Found 36 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
